--- a/product.html
+++ b/product.html
@@ -143,12 +143,13 @@
                                         Price: $ 34.00
                                     </div>
                                     <div class ="details-description">
-                                        <p>dummmmmmmy dummmmy dummmy text</p>
+                                        <p>lorem ipsum</p>
                                     </div>
                                 </div>
                                 <div class ="details-description">
                                     <form>
-                                        <button type = "submit" name="buy_submit" class = "btn btn-primary">Add To Cart</button>
+                                       <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </form>
                                 </div>
 
