--- a/index.html
+++ b/index.html
@@ -148,7 +148,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                         <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -161,7 +162,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                        <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -174,7 +176,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                         <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -187,7 +190,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                        <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -200,7 +204,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                        <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -213,7 +218,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                         <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -226,7 +232,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                        <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -239,7 +246,8 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                         <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
                                     </div>
                                 </div>
                                 <div class="col-md-4 product">
@@ -252,7 +260,9 @@
                                         Mac
                                     </div>
                                     <div class="product-add">
-                                        <button class ="btn btn-primary"type ="submit">Add To Cart</button>
+                                       <p>
+                                <a class ="btn btn-primary" href = "cart.html">Add To Cart</a></p>
+                                       
                                     </div>
                                 </div>
                             </div>
